Ensure Hand component can shrink when container gets too narrow

--- a/src/features/Simulate/components/Hand/index.module.css
+++ b/src/features/Simulate/components/Hand/index.module.css
@@ -7,7 +7,9 @@
     border-radius: 4px;
     outline: 1px solid #000;
 
-    height: 200px;
+    width: 100%;
+    max-width: 240px;
+    aspect-ratio: 1.3;
     padding: 8px;
 }
 
